# tiny-object-detection

./: .gitignore  Cargo.toml  LICENSE.md  README.md  dependencies.sh
.github/workflows/: rust.yml
data/: README.md
plans/: diagram.diagrameditor.com.raw
shaders/: dbg.comp  parallel_connections_algorithm.txt  parallel_weights_calculation.comp  point_cloud_triangulation.comp  pt_cloud.comp  pt_cloud_weights.comp
src/: main.rs  path.rs  scene.rs  shader.glsl  yolact.rs
src/shaders/: point_cloud_triangulation.comp
