[package]
name = "tiny-object-detection"
authors = ["littletitan"]
version = "0.0.0" # not production yet
edition = "2018"

[dependencies]

vulkano = "0.27.1"
vulkano-shaders = "0.27.1"

image = "0.24.0"

tokio = {version = "1.15.0", features = ["full"]}

eye-hal = "0.1.0"

#edgetpu = { git = "https://github.com/ionosnetworks/edgetpu-rs", rev = "56961f2" }
edgetpu = { git = "https://github.com/littletitan/edgetpu-rs", rev = "23311e0" }

bytes = "*"